manifests/istio_yamls/nginx-virtualservices.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            port:
              number: 80
